fixed background on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,13 @@ body {
   margin: 0;
   background: var(--color-bg);
   background-image: url(/src/assets/background.jpg);
-  background-size: 100vw 100vh;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   font-weight: 500;
 }
+
+
 .embla__viewport {
   overflow: hidden;
 }
